--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -63,7 +63,8 @@
             <div class="navbar-end">
               {% if current_user.is_admin() %}
               <div class="navbar-item has-dropdown is-hoverable">
-                <a class="navbar-link has-text-white">Admin</a>
+                <a class="navbar-link has-text-white is-hidden-touch">Admin</a>
+                <a class="navbar-link is-hidden-desktop">Admin</a>
                 <div class="navbar-dropdown">
                   <a class="navbar-item" href="{{ url_for('post.add_post') }}">Add Post</a>
                   <a class="navbar-item" href="{{ url_for('admin_content.manage_content') }}">Manage Content</a>
@@ -73,18 +74,23 @@
                 </div>
               </div>
               {% endif %}
-              <a class="navbar-item has-text-white" href="{{ url_for('main.projects') }}">Projects</a>
-              <a class="navbar-item has-text-white" href="{{ url_for('main.about') }}">About</a>
-              <a class="navbar-item has-text-white" href="{{ url_for('main.contact') }}">Contact</a>
+              <a class="navbar-item has-text-white is-hidden-touch" href="{{ url_for('main.projects') }}">Projects</a>
+              <a class="navbar-item has-text-white is-hidden-touch" href="{{ url_for('main.about') }}">About</a>
+              <a class="navbar-item has-text-white is-hidden-touch" href="{{ url_for('main.contact') }}">Contact</a>
+              <a class="navbar-item is-hidden-desktop" href="{{ url_for('main.projects') }}">Projects</a>
+              <a class="navbar-item is-hidden-desktop" href="{{ url_for('main.about') }}">About</a>
+              <a class="navbar-item is-hidden-desktop" href="{{ url_for('main.contact') }}">Contact</a>
               {% if current_user.is_anonymous %}
-              <a class="navbar-item has-text-white" href="{{ url_for('auth.login') }}">Login</a>
+              <a class="navbar-item has-text-white is-hidden-touch" href="{{ url_for('auth.login') }}">Login</a>
+              <a class="navbar-item is-hidden-desktop" href="{{ url_for('auth.login') }}">Login</a>
               {% else %}
-              <a class="navbar-item has-text-white" href="{{ url_for('auth.logout') }}">Logout</a>
+              <a class="navbar-item has-text-white is-hidden-touch" href="{{ url_for('auth.logout') }}">Logout</a>
+              <a class="navbar-item is-hidden-desktop" href="{{ url_for('auth.logout') }}">Logout</a>
               {% endif %}
               <form class="navbar-item" action="{{ url_for('search.search') }}" method="post">
                 <div class="field has-addons">
                   <div class="control">
-                    <input class="input" id="search_txt" name="search_txt" placeholder="Site Search">
+                    <input class="input" id="search_txt" name="search_txt" placeholder="Blog Search">
                   </div>
                   <div class="control">
                     <button class="button is-info" type="submit" value="Search">Search</button>
