--- a/app/templates/post/del_post.html
+++ b/app/templates/post/del_post.html
@@ -7,24 +7,32 @@
     <h2>Delete Post</h2>
     <p>Are you sure you want to delete this post?</p>
     <table class="table is-narrow">
-      <tr>
-        <td><strong>Author: </strong></td>
-        <td>{{ post.author.firstname }} {{ post.author.lastname }}</td>
-      </tr><tr>
-        <td><strong>Created: </strong></td>
-        <td>{{ moment(post.create_date).format('DD/MM/YYYY') }}</td>
-      </tr><tr>
-        <td><strong>Title:</strong></td>
-        <td>{{ post.heading | safe }}</td>
-      </tr><tr>
-        <td colspan="2">
-          <p><strong>Content:</strong></p>
-          <p>{{ post.post | safe }}</p>
-        </td>
-      </tr><tr>
-        <td><strong>Tags:</strong></td>
-        <td>{{ tags }}</td>
-      </tr>
+      <thead>
+        <tr>
+          <th>Field</th>
+          <th>Value</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><strong>Author: </strong></td>
+          <td>{{ post.author.firstname }} {{ post.author.lastname }}</td>
+        </tr><tr>
+          <td><strong>Created: </strong></td>
+          <td>{{ moment(post.create_date).format('DD/MM/YYYY') }}</td>
+        </tr><tr>
+          <td><strong>Title:</strong></td>
+          <td>{{ post.heading | safe }}</td>
+        </tr><tr>
+          <td colspan="2">
+            <p><strong>Content:</strong></p>
+            <p>{{ post.post | safe }}</p>
+          </td>
+        </tr><tr>
+          <td><strong>Tags:</strong></td>
+          <td>{{ tags }}</td>
+        </tr>
+      </tbody>
     </table>
   </div>
 
