--- a/app/templates/admin_image/del_image.html
+++ b/app/templates/admin_image/del_image.html
@@ -2,17 +2,25 @@
 {% block title %}Admin | Delete Image{% endblock %}
 
 {% block app_content %}
-<h2>Delete Image</h2>
+<div class="section">
+  <div class="content">
+    <h2>Delete Image</h2>
+  </div>
 
-<form action="{{ url_for('admin_image.del_image',id=img.id) }}"  method="post">
-    {{ form.csrf_token }}
-    <p>Are you sure you want to delete the image? Note that this image may currently be used in one of your post.</p>
-    <p><img src="{{ url_for('static',filename='uploads/thumbnails/' ~ img.thumbnail) }}">
-        <div class="minor-text">../../static/uploads/{{ img.filename }}</div>
-        <div class="minor-text">{{ img.file_width }}x{{ img.file_height }}</div>
-        <div class="minor-text">{{ img.file_size }} bytes</div>
-        <div class="minor-text">Uploaded: {{ moment(img.create_date).format('DD/MM/YY') }}</div>
-    </p>
-    {{ form.submit(class="delete-btn") }}
-</form>
+  <form action="{{ url_for('admin_image.del_image',id=img.id) }}"  method="post">
+  {{ form.csrf_token }}
+    <p>Are you sure you want to delete the image? Note be careful as this image may currently be used in one of your post.</p>
+    <img src="{{ url_for('static',filename='uploads/thumbnails/' ~ img.thumbnail) }}">
+    <p>../../static/uploads/{{ img.filename }}</p>
+    <p>{{ img.file_width }}x{{ img.file_height }}</p>
+    <p>{{ img.file_size }} bytes</p>
+    <p>Uploaded: {{ moment(img.create_date).format('DD/MM/YY') }}</p>
+
+    <div class="field">
+      <div class="control">
+        {{ form.submit(class_="button is-link") }}
+      </div>
+    </div>
+  </form>
+</div>
 {% endblock %}
