--- a/app/templates/main/projects.html
+++ b/app/templates/main/projects.html
@@ -5,12 +5,25 @@
 <div class="section">
   <div class="content">
     <h2>Projects</h2>
+
     <div class="tile is-ancestor">
+      <div class="tile is-4 is-vertical is-parent">
+        <div class="tile is-child box">
+          <img src="{{ url_for('static',filename='images/whackmole_web_1100.jpg') }}">
+          <h4>Whack the Mole!</h4>
+          <p><a href="https://whackmole.pythonanywhere.com"><i>whackmole.pythonanywhere.com</i></a> - Sole developer</p>
+          <p>A game I created in VueJS to learn Vue. This was created as a single
+            page application using Flask to serve it. It also uses the Buefy
+            CSS framework.
+          </p>
+        </div>
+      </div>
+
       <div class="tile is-4 is-vertical is-parent">
         <div class="tile is-child box">
           <img src="{{ url_for('static',filename='images/propextr_web_1100.jpg') }}">
           <h4>Property Extractor</h4>
-          <p><a href="http://propertyextractor.com.au"><i>propertyextractor.com.au</i></a> - Lead developer</p>
+          <p><a href="https://propertyextractor.com.au"><i>propertyextractor.com.au</i></a> - Lead developer</p>
           <p>Utilises the domain.com.au API to search for rental properties
               in Australia in real-time and to have the results available as a
               downloadable Excel (csv) file. This website was built for a
@@ -21,6 +34,7 @@
           </p>
         </div>
       </div>
+
       <div class="tile is-4 is-vertical is-parent">
         <div class="tile is-child box">
           <img src="{{ url_for('static',filename='images/arisa_web_1100.jpg') }}">
@@ -37,6 +51,9 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="tile is-ancestor">
       <div class="tile is-4 is-vertical is-parent">
         <div class="tile is-child box">
           <img src="{{ url_for('static',filename='images/kevin7_web_1100.jpg') }}">
@@ -56,6 +73,7 @@
         </div>
       </div>
     </div>
+
   </div>
 </div>
 {% endblock %}
