--- a/app/templates/main/projects.html
+++ b/app/templates/main/projects.html
@@ -23,7 +23,7 @@
         <div class="tile is-child box">
           <img src="{{ url_for('static',filename='images/propextr_web_1100.jpg') }}">
           <h4>Property Extractor</h4>
-          <p><a href="https://propertyextractor.com.au"><i>propertyextractor.com.au</i></a> - Lead developer</p>
+          <p><a href="https://propertyextractor.com.au"><i>propertyextractor.com.au</i></a> - Lead developer with Code.Sydney</p>
           <p>Utilises the domain.com.au API to search for rental properties
               in Australia in real-time and to have the results available as a
               downloadable Excel (csv) file. This website was built for a
@@ -40,7 +40,7 @@
           <img src="{{ url_for('static',filename='images/arisa_web_1100.jpg') }}">
           <div class="proj-descrip">
             <h4>Arisa</h4>
-            <p><a href="https://www.arisa.com.au"><i>www.arisa.com.au</i></a> - Lead developer</p>
+            <p><a href="https://www.arisa.com.au"><i>www.arisa.com.au</i></a> - Lead developer with Code.Sydney</p>
             <p>A student lead generation website built on Flask and incorporating a
                 Google Dialogflow chatbot. Responses are saved into a Mysql database
                 where agencies can then view questions and responses via the backend.
