--- a/app/templates/admin_tag/manage_tags.html
+++ b/app/templates/admin_tag/manage_tags.html
@@ -2,88 +2,80 @@
 {% block title %}Admin | Manage Tags{% endblock %}
 
 {% block app_content %}
-<div class="section">
-  <div class="content">
-    <h2>Manage Tags</h2>
-  </div>
+<div id="app">
+  <div class="section">
+    <div class="content">
+      <h2>Manage Tags</h2>
+    </div>
 
-  <div class="tabs">
-    <ul>
-      <li><a id="defaultOpen" href="#" onclick="openTab(event,'tagused-tab')">Tags used</a></li>
-      <li><a href="#" onclick="openTab(event,'tagnotused-tab')">Tags not used</a></li>
-    </ul>
-  </div>
+    <div class="tabs">
+      <ul>
+        <li :class="{ 'is-active': tabTagUsed }">
+          <a href="#" @click.prevent="tabTagUsed=true">
+            Tags used
+          </a>
+        </li>
+        <li :class="{ 'is-active': !tabTagUsed }">
+          <a href="#" @click.prevent="tabTagUsed=false">
+            Tags not used
+          </a>
+        </li>
+      </ul>
+    </div>
 
-  <div id="tagused-tab" class="tabcontent">
-    <p>To delete these tags, first remove them from all blog postings</p>
-    <table class="table is-striped is-fullwidth">
-    {% if tag_used|length > 0 %}
+    <div v-if="tabTagUsed">
+      <p>To delete these tags, first remove them from all blog postings</p>
+      <table class="table is-striped">
+        {% if tag_used|length > 0 %}
+        <thead>
+          <tr>
+            <th class="has-text-weight-bold">Name of Tag</th>
+            <th class="has-text-weight-bold">Action</th>
+          </tr>
+        </thead>
+        {% endif %}
+        <tbody>
+        {% for tu in tag_used %}
+          <tr>
+            <td>{{ tu.name }}</td>
+            <td><a href="{{ url_for('admin_tag.edit_tag',id=tu.id) }}">edit</a></td>
+          </tr>
+        {% endfor %}
+        </tbody>
+      </table>
+    </div>
+
+    <table v-else class="table is-striped">
+      {% if tag_notused|length > 0 %}
       <thead>
         <tr>
           <th class="has-text-weight-bold">Name of Tag</th>
           <th class="has-text-weight-bold">Action</th>
         </tr>
       </thead>
-    {% endif %}
-    {% for tu in tag_used %}
+      {% endif %}
       <tbody>
-        <tr>
-          <td>{{ tu.name }}</td>
-          <td><a href="{{ url_for('admin_tag.edit_tag',id=tu.id) }}">edit</a></td>
-        </tr>
-      </tbody>
-    {% endfor %}
-    </table>
-  </div>
-
-  <div id="tagnotused-tab" class="tabcontent">
-    <table class="table is-striped is-fullwidth">
-    {% if tag_notused|length > 0 %}
-      <thead>
-        <tr>
-          <th class="has-text-weight-bold">Name of Tag</th>
-          <th class="has-text-weight-bold">Action</th>
-        </tr>
-      </thead>
-    {% endif %}
-    {% for tnu in tag_notused %}
-      <tbody>
+      {% for tnu in tag_notused %}
         <tr>
           <td>{{ tnu.name }}</td>
           <td><a href="{{ url_for('admin_tag.edit_tag',id=tnu.id) }}">edit</a>
           <a href="{{ url_for('admin_tag.del_tag',id=tnu.id) }}">delete</a></td>
         </tr>
+      {% endfor %}
       </tbody>
-    {% endfor %}
     </table>
+
   </div>
 </div>
 {% endblock %}
 
 {% block scripts %}
 <script>
-  // Function for tabbing
-  function openTab(evt, tabName) {
-    var i, tabcontent, tablinks;
-
-    // Get all elements with class="tabcontent" and hide them
-    tabcontent = document.getElementsByClassName("tabcontent");
-    for (i = 0; i < tabcontent.length; i++) {
-      tabcontent[i].style.display = "none";
+  new Vue({
+    el: '#app',
+    data: {
+      tabTagUsed: true
     }
-
-    // Get all elements with class="tablinks" and remove the class "active"
-    tablinks = document.getElementsByClassName("tablinks");
-    for (i = 0; i < tablinks.length; i++) {
-      tablinks[i].className = tablinks[i].className.replace(" active", "");
-    }
-
-    // Show the current tab, and add an "active" class to the button that opened the tab
-    document.getElementById(tabName).style.display = "block";
-    evt.currentTarget.className += " active";
-  }
-
-  // Get the element with id="defaultOpen" and click on it
-  document.getElementById("defaultOpen").click();
+  });
 </script>
 {% endblock %}
