--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,10 +37,6 @@
 
           gtag('config', 'UA-139072308-2');
         </script>
-
-        <!-- Custom Javascript -->
-        {% block scripts %}
-        {% endblock %}
     </head>
     <body class="site">
 
@@ -132,5 +128,9 @@
 
         <script src="{{ url_for('static',filename='scripts/bulmanav.js') }}"></script>
         <script src="{{ url_for('static',filename='scripts/prism.js') }}"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+        <!-- Custom Javascript -->
+        {% block scripts %}
+        {% endblock %}
     </body>
 </html>
