--- a/app/templates/main/contact.html
+++ b/app/templates/main/contact.html
@@ -3,7 +3,7 @@
 
 {% block app_content %}
 <div class="section">
-  <div class="content">
+  <div class="content normal-links">
     <h2>Contact</h2>
     {{ contact_html.content|safe }}
 
