--- a/app/templates/main/about.html
+++ b/app/templates/main/about.html
@@ -3,7 +3,7 @@
 
 {% block app_content %}
 <div class="section">
-  <div class="content">
+  <div class="content normal-links">
     {{ about_html.content|safe }}
   </div>
 </div>
