--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,6 +37,9 @@
 
           gtag('config', 'UA-139072308-2');
         </script>
+        <!-- Google Adsense -->
+        <script data-ad-client="pub-3176153830149274" async src="https://pagead2.googlesyndication.com/
+pagead/js/adsbygoogle.js"></script>
     </head>
     <body class="site">
 
@@ -86,7 +89,7 @@
               <form class="navbar-item" action="{{ url_for('search.search') }}" method="post">
                 <div class="field has-addons">
                   <div class="control">
-                    <input class="input" id="search_txt" name="search_txt" placeholder="Blog Search">
+                    <input class="input" id="search_txt" name="search_txt" placeholder="Search blogs">
                   </div>
                   <div class="control">
                     <button class="button is-info" type="submit" value="Search">Search</button>
