--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -89,7 +89,7 @@ pagead/js/adsbygoogle.js"></script>
               <form class="navbar-item" action="{{ url_for('search.search') }}" method="post">
                 <div class="field has-addons">
                   <div class="control">
-                    <input class="input" id="search_txt" name="search_txt" placeholder="Search blogs">
+                    <input class="input" id="search_txt" name="search_txt" placeholder="Search blog">
                   </div>
                   <div class="control">
                     <button class="button is-info" type="submit" value="Search">Search</button>
