--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="description" content="Kevin Foong - Website & Mobile App Developer, based in Sydney, Australia">
+        <!-- bing -->
+        <meta name="msvalidate.01" content="24C453C9248997BCFBEB0A3857159F41" />
         <title>{% block title %}{% endblock %}</title>
         <!-- favicons -->
         <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='apple-touch-icon.png') }}">
