--- a/app/static/styles/mybulma.css
+++ b/app/static/styles/mybulma.css
@@ -263,7 +263,7 @@ th {
     text-align: left; }
 
 html {
-  background-color: #fefefe;
+  background-color: #f4f4f4;
   font-size: 16px;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
