--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,8 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="description" content="Kevin Foong - Website & Mobile App Developer, based in Sydney, Australia">
-        <!-- bing -->
-        <meta name="msvalidate.01" content="24C453C9248997BCFBEB0A3857159F41" />
         <title>{% block title %}{% endblock %}</title>
         <!-- favicons -->
         <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='apple-touch-icon.png') }}">
@@ -42,6 +40,13 @@
         <!-- Google Adsense -->
         <script data-ad-client="pub-3176153830149274" async src="https://pagead2.googlesyndication.com/
 pagead/js/adsbygoogle.js"></script>
+        <!-- Medianet -->
+        <script type="text/javascript">
+          window._mNHandle = window._mNHandle || {};
+          window._mNHandle.queue = window._mNHandle.queue || [];
+          medianet_versionId = "3121199";
+        </script>
+        <script src="https://contextual.media.net/dmedianet.js?cid=8CU4Y3631" async="async"></script>
     </head>
     <body class="site">
 
@@ -127,7 +132,7 @@ pagead/js/adsbygoogle.js"></script>
                 <i class="fab fa-2x fa-linkedin"></i>
               </a>
             </span>
-            <p class="is-size-7">&#169; 2020 kevin7.net</p>
+            <p class="is-size-7">&#169; 2019-2020 kevin7.net</p>
           </div>
         </footer>
 
