--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -86,6 +86,18 @@
         {% endfor %}
       </div>
     </div>
+
+    <div id="575425111">
+      <script type="text/javascript">
+        try {
+          window._mNHandle.queue.push(function () {
+            window._mNDetails.loadTag("575425111", "300x250", "575425111");
+          });
+        }
+        catch (error) { }
+      </script>
+    </div>
+
     <div class="section">
       <div class="container">
         <h3 class="title is-3">Play</h3>
