--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -3,7 +3,7 @@
 
 {% block app_content %}
 <div class="section">
-  <div class="columns is-variable is-8">
+  <div class="columns">
     <div class="column is-9">
       {% for post in posts.items %}
         <div class="content" style="padding-bottom:1.8rem;">
