--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -67,7 +67,7 @@
   
     <div class="column is-3">
 
-      <div style="padding-left:1.8rem;">
+      <div class="add-gap">
         <div class="content" style="padding-bottom:1.8rem;">
           <h3 class="title is-3">Tags</h3>
           {% for tag_tup in tag_list %}
@@ -96,3 +96,5 @@
   </div>
 </div>
 {% endblock %}
+
+
