--- a/app/static/styles/app.css
+++ b/app/static/styles/app.css
@@ -25,7 +25,7 @@
   overflow-wrap: break-word;
 }
 .tag_num {
-  background-color: #CEE8E1;
+  background-color: #B7DBDA;
   border-radius: 3px;
   padding: 0px 3px 0px 3px;
 }
