--- a/app/templates/post/_tinymce.html
+++ b/app/templates/post/_tinymce.html
@@ -18,7 +18,9 @@
       {text: 'JavaScript', value: 'javascript'},
       {text: 'CSS', value: 'css'},
       {text: 'Processing', value: 'processing'},
-      {text: 'Python', value: 'python'}
+      {text: 'Python', value: 'python'},
+      { text: 'SQL', value: 'sql' },
+      { text: 'SCSS', value: 'scss' }
     ],
     width: "100%",
     });
