--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,8 +37,8 @@
           gtag('config', 'UA-139072308-2');
         </script>
         <!-- Google Adsense -->
-        <script data-ad-client="pub-3176153830149274" async src="https://pagead2.googlesyndication.com/
-pagead/js/adsbygoogle.js"></script>
+        <script data-ad-client="ca-pub-3176153830149274" async
+          src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     </head>
     <body class="site">
 
