--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -124,7 +124,7 @@
                 <i class="fab fa-2x fa-linkedin"></i>
               </a>
             </span>
-            <p class="is-size-7">&#169; 2019-2020 kevin7.net</p>
+            <p class="is-size-7">&#169; 2019-{{ moment().format('YYYY') }} kevin7.net</p>
           </div>
         </footer>
 
