--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -96,7 +96,7 @@
         <div class="content">
           <h3 class="title is-3">Play</h3>
           <div class="side-images">
-            <p>Sketches created using Processing.. enjoy!</p>
+            <p>Sketches I created using <a href="https://processing.org/">Processing</a>. Enjoy!</p>
             <a href="{{ url_for('main.processing', name='garden') }}"><img src="{{ url_for('static', filename='images/garden_smallx2.png') }}" width="100" height="100"></a>
             <a href="{{ url_for('main.processing', name='stars') }}"><img src="{{ url_for('static', filename='images/stars_smallx2.png') }}" width="100" height="100"></a>
             <a href="{{ url_for('main.processing', name='snake_game') }}"><img src="{{ url_for('static', filename='images/snakegame_smallx2.png') }}" width="100" height="100"></a>
