--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -139,9 +139,9 @@
 
         <script src="{{ url_for('static',filename='scripts/bulmanav.js') }}"></script>
         <script src="{{ url_for('static',filename='scripts/prism.js') }}"></script>
-        <!--<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
+        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
         <!-- production version, optimized for size and speed -->
-        <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+        <!--<script src="https://cdn.jsdelivr.net/npm/vue"></script>-->
         <!-- Custom Javascript -->
         {% block scripts %}
         {% endblock %}
